# dasheng-glap

./: README.md  flake.nix  pyproject.toml
glap_model/: torchtyping.py
glap_model/models/audioencoders/: dasheng_audioencoder.py
glap_model/models/textencoders/: sonar_standalone.py  sonar_text_encoder.py
